# comfyui-HF-Downloader

./: .gitignore  README.md  __init__.py  hf_downloader.py  pyproject.toml  server_routes.py  startup_downloads.py
tests/: __init__.py  conftest.py  test_hf_downloader.py  test_server_routes.py  test_startup_downloads.py
web/js/: hf_downloader.js
